--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "voting-application",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -14,10 +15,7 @@
     "react-dom": "19.2.0"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "16.0.3",
-    "tailwindcss": "^4"
+    "eslint": "8.48.0",
+    "eslint-config-next": "16.0.3"
   }
 }
