--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "jsconfig.json": "^2.3.3",
     "next": "16.0.3",
     "react": "19.2.0",
     "react-dom": "19.2.0"
