updates to page.jsx, ImageSlider.jsx,jsconfig, and css files

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,9 +1,13 @@
 {
 	"compilerOptions": {
-        "ignoreDeprecations": "6.0",
+		"ignoreDeprecations": "6.0",
 		"baseUrl": ".",
 		"paths": {
-			"@/*": ["./*"]
+			"@/styles/*": ["./styles/*"],
+			"@/components/*": ["./components/*"],
+			"@/lib/*": ["./lib/*"],
+			"@/public/*": ["./public/*"],
+			"@/app/*": ["./app/*"]
 		}
 	}
 }
