--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,22 +1,18 @@
 {
-	"compilerOptions": {
-		// This is the setting that satisfies the modern requirements:
-    	"moduleResolution": "Bundler",
-		"baseUrl": ".",
-		"paths": {
-			"@/*": ["./*"],
-			"@/styles/*": ["./styles/*"],
-			"@/components/*": ["./components/*"],
-			"@/lib/*": ["./lib/*"],
-			"@/public/*": ["./public/*"],
-			"@/app/*": ["./app/*"]
-		}
-
+  "compilerOptions": {
+    "ignoreDeprecations": "6.0",
+    "moduleResolution": "Bundler",
+    "jsx": "preserve",
+    "target": "esnext",
+    "paths": {
+      "@/*": ["./*"],
+      "@/styles/*": ["./styles/*"],
+      "@/components/*": ["./components/*"],
+      "@/lib/*": ["./lib/*"],
+      "@/public/*": ["./public/*"],
+      "@/app/*": ["./app/*"]
+    }
   },
-  		"jsx": "preserve",
-  		"target": "esnext",
-
-  		"include": ["next-env.d.ts", "**/*.js", "**/*.jsx", "**/*.mjs"],
-  		"exclude": ["node_modules"]
-
+  "include": ["next-env.d.ts", "**/*.js", "**/*.jsx", "**/*.mjs"],
+  "exclude": ["node_modules"]
 }
